# foxplainer

./: .coverage  LICENSE  README.md  codecov.yml  coverage.xml  pyproject.toml  requirements.txt
.github/workflows/: pytest_linux_with_codecov.yml
docs/source/: conf.py  index.rst  modules.rst
fox/: DEMO.ipynb  data.py  explainer.py  html_string.py  lrxp.py  options.py  rndmforest.py  tree.py
fox/dataset/: qt.csv  qt_X_test.csv
fox/global_model/: qt_LR_global_model.pkl
foxplainer/: DEMO.ipynb  explainer.py  html_string.py  lrxp.py  rndmforest.py
foxplainer/dataset/: openstack.csv  openstack_X_test.csv
foxplainer/global_model/: openstack_LR_global_model.pkl
foxplainer/pysat/: card.py  formula.py  solvers.py
foxplainer/pysat/examples/: hitman.py  lbx.py  mcsls.py  rc2.py
tests/: ex_test.ipynb  test_fox.py
