[tool.poetry]
name = "foxplainer"
version = "0.1.4"
description = "FoX: a Fo rmal eX plainer for JIT Defect Prediction"
authors = ["Jinqiang Yu <trustablefox@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
six = "^1.16.0"
pandas = "^1.4.3"
ipywidgets = "^7.7.1"
anytree = "^2.8.0"
scikit-learn = "^1.1.2"
numpy = "^1.23.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
